# txt_file_checker

./: README.md  dune-project  txt_file_checker.opam
data/: test.smi
src/: dune  smi_enforce.ml
